Adding get functionality.

--- a/onetyper_index.html
+++ b/onetyper_index.html
@@ -16,8 +16,9 @@
         <script src="draw.js"></script>
         <script>
             var position = 1;
-            console.log("Get i key:"+OnetyperFormular.get(position)[0]);
-            console.log("Get i value:"+OnetyperFormular.get(position)[1]);
+            console.log("test: "+OnetyperFormular.get(1));
+            //            console.log("Get i key:"+OnetyperFormular.get(position)[0]);
+            //console.log("Get i value:"+OnetyperFormular.get(position)[1]);
         </script>
         <script>         
             Draw.all();
